# pytest-arch

./: .gitignore  AGENTS.md  README.md  noxfile.py  pyproject.toml
.github/workflows/: ci.yml  pytest-compat.yml
src/pyarch/: __init__.py  assertion.py  main.py  model.py  parser.py  plugin.py  pytest_plugin.py  query.py  testutil.py
src/pytest_imports/: model.py  parser.py  plugin.py
test/: conftest.py  test_assertions.py  test_integration.py
test/arch/: test_imports.py
test/integration/: conftest.py  test_assertion.py  test_integration.py  test_parser.py  test_plugin.py
test/integration/plugin/: test_arch.py  test_explain.py  test_projectpath.py
test/plugin/: test_plugin.py
test/unit/: conftest.py  test_assertion.py  test_model.py  test_plugin.py  test_query.py
test/unit/model/: test_dotpath.py  test_node.py
