[tool.poetry]
name = "pytest-arch"
version = "0.1.4"
description = "A pythonic derivative of ArchUnit, in the form of a pytest plugin."
license = "Apache-2.0"
authors = ["Niko Wilbert <mail@nikowilbert.de>"]
classifiers = ["Framework :: Pytest"]
packages = [
    { include = "pyarch", from = "src" },
]

[tool.poetry.plugins."pytest11"]
arch = "pyarch.plugin"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.1.3"

[tool.poetry.group.dev.dependencies]
nox = "^2022.8.7"
nox-poetry = "^1.0.1"
flake8 = "~4.0.1" # 5.0.4 is incompatible with blue
mypy = "^0.971"
blue = "^0.9.1"
pytest-mock = "^3.8.2"
coverage = "^6.4.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
line_length = 79

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
no_implicit_optional = true
warn_return_any = true
show_error_codes = true
warn_unused_ignores = true
disallow_untyped_defs = true

