[project]
name = "pytest-imports"
version = "0.1.4"
description = "A pythonic derivative of ArchUnit, in the form of a pytest plugin."
license = { text = "Apache-2.0" }
authors = [{ name = "Niko Wilbert", email = "mail@nikowilbert.de" }]
classifiers = ["Framework :: Pytest"]
requires-python = ">=3.10"
dependencies = [
    "pytest>=7.2.2",
]

[project.entry-points."pytest11"]
imports = "pytest_imports.plugin"

[dependency-groups]
lint = ["ruff>=0.15.8"]
typecheck = ["mypy>=1.20.0"]
test = ["pytest-mock>=3.15.1"]
coverage = [{include-group = "test"}, "coverage>=7.13.5"]
audit = ["pip-audit>=2.10.0"]
dev = [
    "nox>=2026.2.9",
    {include-group = "lint"},
    {include-group = "typecheck"},
    {include-group = "coverage"},
    {include-group = "audit"},
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pytest_imports"]

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
select = ["B", "C4", "E", "F", "I", "PT", "RUF", "SIM", "UP", "W"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
no_implicit_optional = true
warn_return_any = true
show_error_codes = true
warn_unused_ignores = true
disallow_untyped_defs = true
